# casacore

./: CMakeLists.txt  doxygen.cfg
casa/: CMakeLists.txt
casa/Arrays/: IPosition.h  Vector.h
casa/HDF5/: HDF5Group.cc
casa/IO/test/: CMakeLists.txt
casa/OS/: Conversion.cc  Path.h
casa/OS/test/: CMakeLists.txt  tHostInfo.cc  tMutex.cc
casa/Quanta/: Unit.cc
casa/System/: AipsrcBool.cc
components/: CMakeLists.txt
components/ComponentModels/: ComponentList.cc  TabularSpectrum.cc  TabularSpectrum.h
coordinates/: CMakeLists.txt
coordinates/Coordinates/test/: CMakeLists.txt
debian/: .git-dpm  README.Debian  casacore-dev.install  casacore-doc.README.Debian  casacore-doc.doc-base  casacore-doc.examples  casacore-tools.manpages  casacore.README.Debian  casacore_assay.1  casacore_floatcheck.1  casacore_memcheck.1  casahdf5support.1  changelog  control  copyright  countcode.1  findmeastable.1  fits2table.1  gbp.conf  image2fits.1  imagecalc.1  imageregrid.1  imageslice.1  imreorder.1  libcasa-casa.install  libcasa-casa2.install  libcasa-components.install  libcasa-components1.install  libcasa-coordinates.install  libcasa-coordinates2.install  libcasa-derivedmscal.install  libcasa-derivedmscal1.install  libcasa-fits.install  libcasa-fits2.install  libcasa-images.install  libcasa-images2.install  libcasa-lattices.install  libcasa-lattices2.install  libcasa-meas.install  libcasa-meas1.install  (+25 more)
debian/patches/: 0001-Change-license-and-copyright-info-for-range.c.patch  0001-donot-install-test-and-demonstration-executables.patch  series  (+32 more)
derivedmscal/: CMakeLists.txt
fits/: CMakeLists.txt
images/: CMakeLists.txt
lattices/: CMakeLists.txt
meas/: CMakeLists.txt
measures/: CMakeLists.txt
mirlib/: CMakeLists.txt
ms/: CMakeLists.txt
msfits/: CMakeLists.txt
scimath/: CMakeLists.txt
scimath_f/: CMakeLists.txt  atmroutines.f
tables/: CMakeLists.txt
(+39 files in other folders)
